updated serach properly
