# backend-ops-aws/src/main/java/com/sr/accountposting/dto/posting/PostingSearchResponse.java
@@ -1,0 +1,18 @@
+package com.sr.accountposting.dto.posting;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import lombok.Builder;
+import lombok.Data;
+
+import java.util.List;
+
+@Data
+@Builder
+public class PostingSearchResponse {
+
+    @JsonProperty("items")
+    private List<PostingResponse> items;
+
+    @JsonProperty("next_page_token")
+    private String nextPageToken;
+}
